<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login_account"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/activity_login_subtitle"
        android:textColor="@color/gray2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/email"
        android:textColor="@color/gray2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/write_email"
        android:textColor="#667085"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailLabel" />

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/gray3"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <FrameLayout
        android:id="@+id/passwordContainer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/write_password"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="16dp" />

        <ImageButton
            android:id="@+id/btnTogglePassword"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_eye_off" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/activity_login_forget_password"
        android:textColor="@color/purple"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:enabled="false"
        android:text="@string/come_in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_outline"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="8dp"
        android:textSize="14sp"
        android:paddingStart="24dp"
        android:textAllCaps="false"
        android:text="@string/login_with_google"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/do_registration"
        android:textColor="@color/purple"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 